nav: make sure status dropdown has highest z-index

--- a/web/ui/src/features/layout/Navbar.module.css
+++ b/web/ui/src/features/layout/Navbar.module.css
@@ -37,6 +37,7 @@
 /* "Status" dropdown */
 .statusLink {
   cursor: pointer;
+  z-index: 999;
 }
 
 .statusLink .caret {
